[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
fake_route = []

[dependencies]
simconnect = "0.1.4"
rocket = "0.5.0-rc.2"
serde = "1.0.143"
serde_json = "1.0.83"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
geoutils = "0.5.1"
log = "0.4.17"
env_logger = "0.9.0"
local-ip-address = "0.4.6"
colored = "2.0.0"
rand = "0.8.5"
